# my_esp_idf_components

components/Adafruit-GFX-Library/Fonts/GeistMono/: GeistMonoExtraBold24pt7b.h  GeistMonoRegular6pt7b.h  GeistMonoRegular8pt7b.h  GeistMonoThin6pt7b.h
components/Adafruit-GFX-Library/Fonts/JetBrainsMono/: JetBrainsMonoExtraBold24pt7b.h  JetBrainsMonoThin6pt7b.h
components/Adafruit-GFX-Library/Fonts/Micro5/: Micro5Regular24pt7b.h
components/Adafruit-GFX-Library/fontconvert/: GeistMonoExtraBold12pt7b.h  GeistMonoExtraBold6pt7b.h  GeistMonoThin8pt7b.h  JetBrainsMonoLight6pt7b.h  OxaniumBold24pt7b.h
components/Adafruit_SSD1306/: CMakeLists.txt
components/MAX6675_library/: CMakeLists.txt
components/PicoMQTT/: CMakeLists.txt
components/anemometer_v1/: anemometer.cpp
components/anemometer_v1/include/: anemometer.h
components/anemometer_v2/: .gitignore  README.md  anemometer.cpp
components/arduino-mcp2515/: CMakeLists.txt
components/my_components/: CMakeLists.txt  my_components.c
components/my_components/include/: my_components.h
components/my_components_cxx/: CMakeLists.txt  my_components_cxx.cpp
components/my_components_cxx/include/: my_components_cxx.hpp
components/tb600b_cxx/: .gitignore  CMakeLists.txt  README.md  tb600b.cpp  uart_user_config.cpp
components/tb600b_cxx/include/: tb600b.h  uart_user_config.h
components/tb600b_v1/: README.md  tb600b.cpp
components/tb600b_v1/include/: tb600b.h
components/tb600b_v2/: CMakeLists.txt  README.md  tb600b_v2.cpp
components/tb600b_v2/examples/tb600b_v2_example/components/tb600b_v2/: CMakeLists.txt
components/tb600b_v2/examples/tb600b_v2_example/main/: CMakeLists.txt  idf_component.yml  main.cpp
components/tb600b_v2/examples/tb600b_v2_example/main/include/: board_pins.h
components/tb600b_v2/include/: tb600b_v2.h
(+17 files in other folders)
